src/main/default/objects/DR_Failed_Event__c/DR_Failed_Event__c.object-meta.xml
<CustomObject>
    <description>This object contains all the DR Webhook Events that were not processed by the Connector</description>
    <label>Digital River Failed Event</label>
    <nameField>
        <displayFormat>DR-Event-{00000}</displayFormat>
        <label>Digital River Failed Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital River Failed Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>