src/main/default/objects/DR_Failed_Event__c/fields/Event_Capture_Reason__c.field-meta.xml
<CustomField>
    <fullName>Event_Capture_Reason__c</fullName>
    <description>This field stores the reason this event has been stored in SF</description>
    <inlineHelpText>This field stores the reason this event has been stored in SF</inlineHelpText>
    <label>Event Capture Reason</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>