src/main/default/objects/DR_Failed_Event__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>Unique identifier of the event</description>
    <inlineHelpText>Unique identifier of the event</inlineHelpText>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>