src/main/default/objects/DR_Failed_Event__c/fields/Event_Payload__c.field-meta.xml
<CustomField>
    <fullName>Event_Payload__c</fullName>
    <description>DR Webhook Event Request Payload</description>
    <inlineHelpText>DR Webhook Event Request Payload</inlineHelpText>
    <label>Event Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>