src/main/default/objects/DR_Failed_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>DR Event Type. For example, order.complete</description>
    <inlineHelpText>DR Event Type. For example, order.complete</inlineHelpText>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>