src/main/default/objects/DR_Failed_Event__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Event is processed successfully after the initial failure</description>
    <inlineHelpText>Indicates if this Event is processed successfully after the initial failure</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>