src/main/default/objects/DR_Failed_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Id__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Event_Capture_Reason__c</columns>
    <columns>Processed__c</columns>
    <columns>Event_Payload__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>